Add primary elements and styles

--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class='primary-header'>Discover hidden places in the world around you</h1>
+    <h1 class='primary-headers'>Discover hidden places in the world around you</h1>
     <a class='primary-link' href="https://content.codecademy.com/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a>
-    
+    <div class='primary-video'>
+        <video src='./resources/excursion.mp4'></video>
+    </div>
+    <h1 class='primary-headers'>Your personal travel guide</h1>
+   <h4 class='secondary-headers'>Excursion remembers places you like, and recommends new points of interest around you.</h4>
+   <div class='image-holder'>
+        <img src="./resources/camp.webp">
+   </div> 
+   <div class='image-holder'>
+    <img src="./resources/phone.webp">
+</div>
+    <h1 class='primary-headers'>Coming soon for iPhone an Android</h1>
+    <a class='primary-link' href="https://content.codecademy.com/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a>
 </body>
 </html>
