Add footer style updates, autoplat video

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='./css/style.css' type='text/css'>
+    <link rel='stylesheet' href='./css/style.css' type='text/css'>
     <title>Document</title>
 </head>
 <body>
     <h1 class='primary-headers'>Discover hidden places in the world around you</h1>
     <a class='primary-link' href="https://content.codecademy.com/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a>
     <div class='primary-video'>
-        <video src='./resources/excursion.mp4'></video>
+        <video src='./resources/excursion.mp4' autoplay></video>
     </div>
     <h1 class='primary-headers'>Your personal travel guide</h1>
    <h4 class='secondary-headers'>Excursion remembers places you like, and recommends new points of interest around you.</h4>
@@ -19,9 +19,12 @@
         <img src="./resources/camp.webp">
    </div> 
    <div class='image-holder'>
-    <img src="./resources/phone.webp">
-</div>
+        <img src="./resources/phone.webp">
+    </div>
     <h1 class='primary-headers'>Coming soon for iPhone an Android</h1>
     <a class='primary-link' href="https://content.codecademy.com/programs/freelance-one/excursion/index.html#">Download Excursion (Coming soon!)</a>
+    <footer>
+        <h4 class='secondary-headers'>&copy Excursion</h4>
+    </footer>
 </body>
 </html>
